# Predictive-Grading-Model

./: Grades.ipynb  Grades.sql  Model.ipynb  Prediction.ipynb  Prediction_TEST.ipynb  README.md  pyproject.toml
